objects/Brands__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advertiser__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Advertiser</label>
        <referenceTo>Advertiser__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Client__c</fullName>
        <description>DELETE</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>[Dep]Agency Client</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Estimate__c</fullName>
        <description>DELETE</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>[Dep]Agency Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_Product_del__c</fullName>
        <description>DELETE</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>[Dep]Agency Product</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Duplicate__c</fullName>
        <label>Duplicate Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <description>Networks on which a specific commercial is approved for air. DELETE</description>
        <inlineHelpText>Networks on which a specific commercial is approved for air. DELETE</inlineHelpText>
        <label>[Dep]Approved</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>21st Century Fox Syndication</fullName>
                </value>
                <value>
                    <fullName>Antenna TV</fullName>
                </value>
                <value>
                    <fullName>Bill Cunningham</fullName>
                </value>
                <value>
                    <fullName>BounceTV</fullName>
                </value>
                <value>
                    <fullName>BuzzrTV</fullName>
                </value>
                <value>
                    <fullName>Cheaters</fullName>
                </value>
                <value>
                    <fullName>COZI</fullName>
                </value>
                <value>
                    <fullName>EscapeTV</fullName>
                </value>
                <value>
                    <fullName>FBN</fullName>
                </value>
                <value>
                    <fullName>GritTV</fullName>
                </value>
                <value>
                    <fullName>Justice Network</fullName>
                </value>
                <value>
                    <fullName>MAV TV</fullName>
                </value>
                <value>
                    <fullName>MGM HD</fullName>
                </value>
                <value>
                    <fullName>MGM Syndication</fullName>
                </value>
                <value>
                    <fullName>MLB Network</fullName>
                </value>
                <value>
                    <fullName>Paternity Court</fullName>
                </value>
                <value>
                    <fullName>Real Life 101</fullName>
                </value>
                <value>
                    <fullName>Ron Hazelton</fullName>
                </value>
                <value>
                    <fullName>Showcase</fullName>
                </value>
                <value>
                    <fullName>Tennis Channel</fullName>
                </value>
                <value>
                    <fullName>This TV</fullName>
                </value>
                <value>
                    <fullName>TKN</fullName>
                </value>
                <value>
                    <fullName>Wild America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_CIA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify which brands are CIA DELETE</description>
        <inlineHelpText>Please check this box only if the brand is CIA DELETE</inlineHelpText>
        <label>[Dep]Brand CIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Credit_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Brand Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand_Number__c</fullName>
        <description>Unique number created per Intacct request</description>
        <displayFormat>B-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Brand Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Brands_Advertisers__c</fullName>
        <formula>Name  &amp;&quot; - &quot;&amp; Advertiser__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brands Advertisers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPM_P_Secondary__c</fullName>
        <description>Secondary CPM/CPP DELETE</description>
        <inlineHelpText>Secondary CPM/CPP DELETE</inlineHelpText>
        <label>[Dep]CPM/P - Secondary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Primary__c</fullName>
        <description>Primary CPM/CPP for Brand DELETE</description>
        <inlineHelpText>Primary CPM/CPP for Brand DELETE</inlineHelpText>
        <label>[Dep]CPM/P - Primary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPO_CPA__c</fullName>
        <description>Cost Per Order/Acquisition/Action</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>[Dep]CPO/CPA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Insensitive_ID__c</fullName>
        <description>Case Sensitive ID For Use in Excel Matching</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Case Sensitive ID For Use in Excel Matching (VLookups)</inlineHelpText>
        <label>Case Insensitive ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.Com/E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Apparel/Accessories</fullName>
                </value>
                <value>
                    <fullName>Appliances/Home Gadgets</fullName>
                </value>
                <value>
                    <fullName>Attorney/General Legal Services</fullName>
                </value>
                <value>
                    <fullName>Attorney-Medical Services/Equipments/Prescriptions</fullName>
                </value>
                <value>
                    <fullName>Auto Accessories/Parts/Repair</fullName>
                </value>
                <value>
                    <fullName>Baby</fullName>
                </value>
                <value>
                    <fullName>Beauty/Cosmetics/Hair Care</fullName>
                </value>
                <value>
                    <fullName>Business/Professional Services</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Cleaning Supplies</fullName>
                </value>
                <value>
                    <fullName>Crafts/Hobbies/Sporting goods/Toys</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics/Software</fullName>
                </value>
                <value>
                    <fullName>Entertainment/Gaming</fullName>
                </value>
                <value>
                    <fullName>Fitness/Health/Medical Equipment</fullName>
                </value>
                <value>
                    <fullName>Food and Beverages</fullName>
                </value>
                <value>
                    <fullName>Home Improvement/Furniture</fullName>
                </value>
                <value>
                    <fullName>Insurance- Auto</fullName>
                </value>
                <value>
                    <fullName>Insurance- Health/ Dental/ Disability</fullName>
                </value>
                <value>
                    <fullName>Insurance- Life</fullName>
                </value>
                <value>
                    <fullName>Media/Telecom</fullName>
                </value>
                <value>
                    <fullName>Medical Services</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Mobile Apps</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Pets</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals/Drugs</fullName>
                </value>
                <value>
                    <fullName>Social Networking/Dating</fullName>
                </value>
                <value>
                    <fullName>Toiletry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Primary__c</fullName>
        <description>DELETE</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>[Dep]Demo - Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HH</fullName>
                </value>
                <value>
                    <fullName>A18+</fullName>
                </value>
                <value>
                    <fullName>A18-34</fullName>
                </value>
                <value>
                    <fullName>A18-49</fullName>
                </value>
                <value>
                    <fullName>A25-49</fullName>
                </value>
                <value>
                    <fullName>A25-54</fullName>
                </value>
                <value>
                    <fullName>A35-64</fullName>
                </value>
                <value>
                    <fullName>A50+</fullName>
                </value>
                <value>
                    <fullName>A65+</fullName>
                </value>
                <value>
                    <fullName>W18+</fullName>
                </value>
                <value>
                    <fullName>W18-34</fullName>
                </value>
                <value>
                    <fullName>W18-49</fullName>
                </value>
                <value>
                    <fullName>W25-49</fullName>
                </value>
                <value>
                    <fullName>W25-54</fullName>
                </value>
                <value>
                    <fullName>W35-64</fullName>
                </value>
                <value>
                    <fullName>W50+</fullName>
                </value>
                <value>
                    <fullName>W65+</fullName>
                </value>
                <value>
                    <fullName>M18+</fullName>
                </value>
                <value>
                    <fullName>M18-34</fullName>
                </value>
                <value>
                    <fullName>M18-49</fullName>
                </value>
                <value>
                    <fullName>M25-49</fullName>
                </value>
                <value>
                    <fullName>M25-54</fullName>
                </value>
                <value>
                    <fullName>M35-64</fullName>
                </value>
                <value>
                    <fullName>M50+</fullName>
                </value>
                <value>
                    <fullName>M65+</fullName>
                </value>
                <value>
                    <fullName>P2-11</fullName>
                </value>
                <value>
                    <fullName>P6-11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Secondary__c</fullName>
        <description>DELETE</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>[Dep]Demo - Secondary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HH</fullName>
                </value>
                <value>
                    <fullName>A18+</fullName>
                </value>
                <value>
                    <fullName>A18-34</fullName>
                </value>
                <value>
                    <fullName>A18-49</fullName>
                </value>
                <value>
                    <fullName>A25-49</fullName>
                </value>
                <value>
                    <fullName>A25-54</fullName>
                </value>
                <value>
                    <fullName>A35-64</fullName>
                </value>
                <value>
                    <fullName>A50+</fullName>
                </value>
                <value>
                    <fullName>A65+</fullName>
                </value>
                <value>
                    <fullName>W18+</fullName>
                </value>
                <value>
                    <fullName>W18-34</fullName>
                </value>
                <value>
                    <fullName>W18-49</fullName>
                </value>
                <value>
                    <fullName>W25-49</fullName>
                </value>
                <value>
                    <fullName>W25-54</fullName>
                </value>
                <value>
                    <fullName>W35-64</fullName>
                </value>
                <value>
                    <fullName>W50+</fullName>
                </value>
                <value>
                    <fullName>W65+</fullName>
                </value>
                <value>
                    <fullName>M18+</fullName>
                </value>
                <value>
                    <fullName>M18-34</fullName>
                </value>
                <value>
                    <fullName>M18-49</fullName>
                </value>
                <value>
                    <fullName>M25-49</fullName>
                </value>
                <value>
                    <fullName>M25-54</fullName>
                </value>
                <value>
                    <fullName>M35-64</fullName>
                </value>
                <value>
                    <fullName>M50+</fullName>
                </value>
                <value>
                    <fullName>M65+</fullName>
                </value>
                <value>
                    <fullName>P2-11</fullName>
                </value>
                <value>
                    <fullName>P6-11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>[Dep]Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dupe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DELETE</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>Dupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_to_SF_ID__c</fullName>
        <formula>&quot;(ref:&quot;&amp; Id &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email to SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hitlisted__c</fullName>
        <description>DELETE</description>
        <inlineHelpText>If a brand hitlists a program, select the program here DELETE</inlineHelpText>
        <label>Hitlisted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill Cunningham Show</fullName>
                </value>
                <value>
                    <fullName>Bounce TV</fullName>
                </value>
                <value>
                    <fullName>Cheaters</fullName>
                </value>
                <value>
                    <fullName>MLB Network</fullName>
                </value>
                <value>
                    <fullName>MGM Syndication</fullName>
                </value>
                <value>
                    <fullName>MGM HD</fullName>
                </value>
                <value>
                    <fullName>Ron Hazelton</fullName>
                </value>
                <value>
                    <fullName>Tennis Channel</fullName>
                </value>
                <value>
                    <fullName>Paternity Court</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DELETE</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>[Dep]Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Approved__c</fullName>
        <description>Networks on which a commercial is not approved for air</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>[Dep]Not Approved</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>21st Century Fox Syndication</fullName>
                </value>
                <value>
                    <fullName>Antenna TV</fullName>
                </value>
                <value>
                    <fullName>Bill Cunningham</fullName>
                </value>
                <value>
                    <fullName>Bounce TV</fullName>
                </value>
                <value>
                    <fullName>BuzzrTV</fullName>
                </value>
                <value>
                    <fullName>CBS Sports</fullName>
                </value>
                <value>
                    <fullName>Cheaters</fullName>
                </value>
                <value>
                    <fullName>COZI</fullName>
                </value>
                <value>
                    <fullName>Documentary</fullName>
                </value>
                <value>
                    <fullName>Escape TV</fullName>
                </value>
                <value>
                    <fullName>FBN</fullName>
                </value>
                <value>
                    <fullName>Grit TV</fullName>
                </value>
                <value>
                    <fullName>Justice Network</fullName>
                </value>
                <value>
                    <fullName>MAV TV</fullName>
                </value>
                <value>
                    <fullName>MGM HD</fullName>
                </value>
                <value>
                    <fullName>MGM Syndication</fullName>
                </value>
                <value>
                    <fullName>MLB Network</fullName>
                </value>
                <value>
                    <fullName>Paternity Court</fullName>
                </value>
                <value>
                    <fullName>Real Life 101</fullName>
                </value>
                <value>
                    <fullName>Ron Hazelton</fullName>
                </value>
                <value>
                    <fullName>Showcase</fullName>
                </value>
                <value>
                    <fullName>Tennis Channel</fullName>
                </value>
                <value>
                    <fullName>This TV</fullName>
                </value>
                <value>
                    <fullName>TKN</fullName>
                </value>
                <value>
                    <fullName>Wild America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Screened for content and redflags by MVMS</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>[Dep]Screened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spanish_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DELETE</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>Spanish Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Brand_Identifer__c</fullName>
        <label>Unique Brand Identifer</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>X21st_Century_Fox_Syndcation_Credit_Term__c</fullName>
        <description>DELETE</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>21st Century Fox Syndcation Credit Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIA</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X28_30__c</fullName>
        <defaultValue>false</defaultValue>
        <label>28:30</label>
        <type>Checkbox</type>
    </fields>
    <label>Brands</label>
    <listViews>
        <fullName>Advertiser_Move</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Advertiser__c</columns>
        <columns>Category__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Unique_Brand_Identifer__c</columns>
        <columns>Dupe__c</columns>
        <columns>Merge__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Advertiser__c</field>
            <operation>equals</operation>
            <value>Idea Village</value>
        </filters>
        <label>Advertiser Move</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Advertiser__c</columns>
        <columns>Category__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Unique_Brand_Identifer__c</columns>
        <columns>Dupe__c</columns>
        <columns>Merge__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_BRANDS_w_Credit_Limits</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Unique_Brand_Identifer__c</columns>
        <columns>Brand_Credit_Limit__c</columns>
        <columns>Brand_CIA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Credit_Limit__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All BRANDS w Credit Limits</label>
    </listViews>
    <listViews>
        <fullName>All_CIA_BRANDS</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Unique_Brand_Identifer__c</columns>
        <columns>Brand_Credit_Limit__c</columns>
        <columns>Brand_CIA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_CIA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All CIA BRANDS</label>
    </listViews>
    <listViews>
        <fullName>Alltest</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Advertiser__c</columns>
        <columns>Category__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Unique_Brand_Identifer__c</columns>
        <columns>Dupe__c</columns>
        <columns>Merge__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>z&amp;</value>
        </filters>
        <label>Alle</label>
    </listViews>
    <listViews>
        <fullName>Brand_Check</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>aspca,bark off,big top cupcake,beezid,crazy critters,direct buy national</value>
        </filters>
        <label>Brand Check</label>
    </listViews>
    <listViews>
        <fullName>DealProcess</fullName>
        <filterScope>Queue</filterScope>
        <label>Deal Process</label>
        <queue>DealProcess</queue>
    </listViews>
    <listViews>
        <fullName>FBN_Approved</fullName>
        <booleanFilter>( 1 or 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>Approved__c</columns>
        <columns>Not_Approved__c</columns>
        <columns>Screened__c</columns>
        <columns>X28_30__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approved__c</field>
            <operation>includes</operation>
            <value>FBN</value>
        </filters>
        <filters>
            <field>Not_Approved__c</field>
            <operation>includes</operation>
            <value>FBN</value>
        </filters>
        <label>FBN Approved</label>
    </listViews>
    <listViews>
        <fullName>Horizon_Brands</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>horizon media</value>
        </filters>
        <filters>
            <field>X28_30__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Horizon Brands</label>
    </listViews>
    <listViews>
        <fullName>LF_Brands</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X28_30__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>LF Brands</label>
    </listViews>
    <listViews>
        <fullName>New_Brands</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Account__c</columns>
        <columns>Category__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:10</value>
        </filters>
        <filters>
            <field>X28_30__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>cornerstone,rev share,cannella</value>
        </filters>
        <label>New Brands</label>
    </listViews>
    <listViews>
        <fullName>OLD_BRANDS</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>1/1/2009 12:00 AM</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>lessThan</operation>
            <value>5/1/2009 12:00 AM</value>
        </filters>
        <label>OLD BRANDS</label>
    </listViews>
    <listViews>
        <fullName>P_G</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Advertiser__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Advertiser__c</field>
            <operation>equals</operation>
            <value>P&amp;G</value>
        </filters>
        <label>P&amp;G</label>
    </listViews>
    <listViews>
        <fullName>Screening</fullName>
        <columns>NAME</columns>
        <columns>Screened__c</columns>
        <columns>Approved__c</columns>
        <columns>Not_Approved__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X28_30__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Screening</label>
    </listViews>
    <listViews>
        <fullName>z</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>z&amp;</value>
        </filters>
        <label>z-</label>
    </listViews>
    <nameField>
        <label>Brand</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Category_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Category__c , &quot;&quot;)</errorConditionFormula>
        <errorMessage>Category is required. Please select appropriate category from list.</errorMessage>
    </validationRules>
</CustomObject>